Fix T40315: Boolean modifier with Freestyle edges